# Rust-Base-Learning

./: README.md
16_Multi_threading/: Cargo.toml  multi_threading.md
17_Object_oriented_programming_features/: Cargo.toml  Object_O_P_features.md
18_pattern_matching/: Cargo.toml  pattern_matching.md
19_high_trait/: Cargo.toml  high-trait.md
19_high_trait/example1_191/: Cargo.toml
19_high_trait/example2_191/: Cargo.toml
19_high_trait/example3_191/: Cargo.toml
19_high_trait/example4_191/: Cargo.toml
19_high_trait/example5_191/: Cargo.toml
19_high_trait/example6_191/: Cargo.toml
GeussNum/: Cargo.toml
GeussNum/src/: main.rs
Module_Splitting/: Cargo.toml
Module_Splitting/src/: front_of_house.rs  lib.rs
cargo_workspace_trying/: Cargo.toml
cargo_workspace_trying/adder/: Cargo.toml
cargo_workspace_trying/adder_bench/: Cargo.toml
cargo_workspace_trying/adder_tests/: Cargo.toml
closures_trying/: Cargo.toml
closures_trying/src/: lib.rs  main.rs
compound/src/: main.rs
controling/: Cargo.toml
controling/src/: main.rs
crate_trying/: Cargo.toml  lib_14.2
crate_trying/src/: lib.rs  main.rs
enum_trying/: Cargo.toml
enum_trying/src/: main.rs
error_solving/: Cargo.toml
function_try/: Cargo.toml
generic_trying/: Cargo.toml
hashmap_tring/: Cargo.toml
lifetime_trying/: Cargo.toml
match_trying/: Cargo.toml
smart_pointer_trying/: Cargo.toml  smart_pointer.md
strct_demo/: Cargo.toml
struct_trying/: Cargo.toml
test_trying/: Cargo.toml
trait_trying/: Cargo.toml
use_trying/: Cargo.toml
vector_try/: Cargo.toml
(+74 files in other folders)
